Add CPTs and taxonomies to child theme

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ GitHub Theme URI: [Insert your URL here if you want to support GitHub Updater]
 
 License: GNU GPL version 2
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: pitchfork-child
+Text Domain: pitchfork-lth
 */
 
 /*
