--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Pitchfork Child Template
-Theme URI: https://github.com/asuengineering/pitchfork-child
+Theme Name: Pitchfork LTH
+Theme URI: https://github.com/asuengineering/pitchfork-lth
 Author: ASU Engineering
 Author URI: https://github.com/asuengineering
-Description: Child theme template for Pitchfork
-Version: 0.1.0
+Description: The Learning and Teaching child theme for Pitchfork. (Maintained by ASU Engineering.)
+Version: 0.2.0
 
 Template: pitchfork
 
-GitHub Theme URI: [Insert your URL here if you want to support GitHub Updater]
+GitHub Theme URI: https://github.com/asuengineering/pitchfork-lth
 
 License: GNU GPL version 2
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
